fix spacing, add short description

--- a/src/headerStyle.module.css
+++ b/src/headerStyle.module.css
@@ -1,3 +1,3 @@
 .primaryHeader {
-    color: tomato;
+    color: "secondary";
 }
